hphp/hack/test/typecheck/reactive/rx_superglobals6.php
<?hh
<<__Rx>>
function f(): void {
  $a = $_COOKIE;
}
